Refactor presence polling, secure Spotify OAuth with JWT state, and prepare for Render deployment